--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-einops==0.4.0
+einops==0.8.0
 matplotlib==3.7.0
 numpy==1.23.5
 pandas==1.5.3
@@ -10,3 +10,9 @@ sktime==0.16.1
 sympy==1.11.1
 torch==2.0.1
 tqdm==4.64.1
+
+# dependencies that are not explicitly included
+lit
+cmake
+triton
+seaborn
